<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Views.MainActivity"
    android:id="@+id/activityMain">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="20dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="180dp"
            android:layout_height="200dp"
            android:background="@drawable/cyborg"
            android:layout_gravity="center"
            android:id="@+id/cyborgImage"/>


    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enter_tally_ip_address"
        android:inputType="textUri"
        android:id="@+id/tallyIpAddress"
        />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/enter_tally_port"
            android:inputType="number"
            android:id="@+id/tallyPort"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="30sp"
            android:layout_marginRight="20sp"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimaryDark"
            android:text="@string/connect"
            android:id="@+id/connectButton"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>